--- a/Whip/Whip.csproj
+++ b/Whip/Whip.csproj
@@ -55,6 +55,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Container.cs" />
+    <Compile Include="ElementStore.cs" />
+    <Compile Include="IXmlConfigurable.cs" />
+    <Compile Include="SkinBootstrapper.cs" />
     <Compile Include="WinampXmlReader.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
