--- a/Whip/Whip.csproj
+++ b/Whip/Whip.csproj
@@ -55,11 +55,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Container.cs" />
+    <Compile Include="Widgets\Container.cs" />
     <Compile Include="ElementStore.cs" />
-    <Compile Include="Group.cs" />
-    <Compile Include="GuiObject.cs" />
-    <Compile Include="ImageTest.cs" />
+    <Compile Include="Widgets\Group.cs" />
+    <Compile Include="Widgets\GuiObject.cs" />
+    <Compile Include="Widgets\ImageTest.cs" />
     <Compile Include="IXmlConfigurable.cs" />
     <Compile Include="RelatPanel.cs" />
     <Compile Include="SkinBootstrapper.cs" />
@@ -108,6 +108,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
