Script context doesn't have to be a class, make it an interface

--- a/Whip/Whip.csproj
+++ b/Whip/Whip.csproj
@@ -60,7 +60,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Scripting\IScriptable.cs" />
-    <Compile Include="Scripting\ScriptContext.cs" />
+    <Compile Include="Scripting\IScriptContext.cs" />
     <Compile Include="Scripting\ScriptObjectStore.cs" />
     <Compile Include="Scripting\ScriptReader.cs" />
     <Compile Include="Scripting\ScriptStack.cs" />
