--- a/WhipTests/WhipTests.csproj
+++ b/WhipTests/WhipTests.csproj
@@ -78,6 +78,78 @@
       <LastGenOutput>ScriptsDir.cs</LastGenOutput>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Scripting\TestScripts\src\recomp.bat" />
+    <None Include="Scripting\TestScripts\src\t00_true.m" />
+    <None Include="Scripting\TestScripts\src\t01_notfalse.m" />
+    <None Include="Scripting\TestScripts\src\t02_int_lt_int.m" />
+    <None Include="Scripting\TestScripts\src\t03_int_lte_int.m" />
+    <None Include="Scripting\TestScripts\src\t04_int_gt_int.m" />
+    <None Include="Scripting\TestScripts\src\t05_int_gte_int.m" />
+    <None Include="Scripting\TestScripts\src\t06_int_lt_int_global.m" />
+    <None Include="Scripting\TestScripts\src\t07_arithmetics.m" />
+    <None Include="Scripting\TestScripts\src\t08_arithmetics2.m" />
+    <None Include="Scripting\TestScripts\src\t09_notequal.m" />
+    <None Include="Scripting\TestScripts\src\t10_if.m" />
+    <None Include="Scripting\TestScripts\src\t11_else.m" />
+    <None Include="Scripting\TestScripts\src\t12_inc.m" />
+    <None Include="Scripting\TestScripts\src\t13_new.m" />
+    <None Include="Scripting\TestScripts\src\t14_function.m" />
+    <None Include="Scripting\TestScripts\src\t15_alt_event_name.m" />
+    <None Include="Scripting\TestScripts\src\t16_needscontext.m" />
+    <None Include="Scripting\TestScripts\src\test.mi" />
+    <Content Include="Scripting\TestScripts\t00_true.maki">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripting\TestScripts\t01_notfalse.maki">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripting\TestScripts\t02_int_lt_int.maki">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripting\TestScripts\t03_int_lte_int.maki">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripting\TestScripts\t04_int_gt_int.maki">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripting\TestScripts\t05_int_gte_int.maki">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripting\TestScripts\t06_int_lt_int_global.maki">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripting\TestScripts\t07_arithmetics.maki">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripting\TestScripts\t08_arithmetics2.maki">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripting\TestScripts\t09_notequal.maki">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripting\TestScripts\t10_if.maki">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripting\TestScripts\t11_else.maki">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripting\TestScripts\t12_inc.maki">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripting\TestScripts\t13_new.maki">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripting\TestScripts\t14_function.maki">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripting\TestScripts\t15_alt_event_name.maki">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripting\TestScripts\t16_needscontext.maki">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
