--- a/WhipTests/WhipTests.csproj
+++ b/WhipTests/WhipTests.csproj
@@ -64,6 +64,10 @@
     <Compile Include="Scripting\VCPUTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\WhipMaki\WhipMaki.csproj">
+      <Project>{95295b0c-1119-4570-9375-ebfdc93055d6}</Project>
+      <Name>WhipMaki</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Whip\Whip.csproj">
       <Project>{C3B35A71-57F5-4919-9609-EE7FA5098EE4}</Project>
       <Name>Whip</Name>
